--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ rich==13.5.2
 scikit-learn
 scipy
 seaborn==0.12.2
-shap==0.42.1
+shap==0.42.1a
 spacy==3.6.1
 statsmodels==0.14.0
 tensorflow==2.8.0
+protobuf==3.20.0
